--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,7 +14,8 @@
   </head>
 
   <body>
-    <main class="container"><%- body %></main>
+    <%- include('../partials/navbar')%>
+    <main class="container mt-5"><%- body %></main>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
