--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOILERPLATE!!!!!</title>
+    <title>YelpCamp</title>
 
     <link
       rel="stylesheet"
@@ -13,9 +13,10 @@
     />
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar')%>
     <main class="container mt-5"><%- body %></main>
+    <%- include('../partials/footer')%>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
