--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,5 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/stylesheets/stars.css">
-
 <div class="row">
   <div class="col-6">
     <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
@@ -42,13 +41,22 @@
         </form>
       </div>
       <% } %>
-      <div class="card-footer text-muted">2 days ago</div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
     </div>
 
   </div>
-  <div class="col-6"> <% if(currentUser){ %>
+  <div class="col-6">
+    <div id='map' style='width: 100%; height: 300px;'></div>
+
+    <% if(currentUser){ %>
     <h2>Leave a Review</h2>
     <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+      <!-- <div class="mb-3">
+                <label class="form-label" for="rating">Rating</label>
+                <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+            </div> -->
       <fieldset class="starability-basic">
         <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
         <input type="radio" id="first-rate1" name="review[rating]" value="1" />
@@ -75,11 +83,11 @@
     <% for(let review of campground.reviews) { %>
     <div class="card mb-3 ">
       <div class="card-body">
-        <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <h5 class="card-title"> <%= review.author.username%></h5>
         <p class="starability-result" data-rating="<%=review.rating%>">
           Rated: <%= review.rating %> stars
         </p>
-        <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username%></h6>
+        <!-- <h6 class="card-subtitle mb-2 text-muted">By <%= review.author.username%></h6> -->
         <p class="card-text">Review: <%= review.body %></p>
         <%  if( currentUser && review.author.equals(currentUser._id))  {%>
         <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
@@ -91,3 +99,10 @@
     <% } %>
   </div>
 </div>
+
+<script>
+  const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+  const campground = <%- JSON.stringify(campground) %>
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
