feat: integrate helmet and html sanitization
- configure helmet for content security policy with specific directives for scripts, styles, and images
- update schemas with joi extension for sanitizing html input
- enforce content security policy to permit necessary sources and block unwanted html

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,9 +10,9 @@
     <div class="row">
       <div class="col-md-4">
         <%if(campground.images.length) {%>
-        <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+        <img crossorigin="anonymous" class="img-fluid" alt="" src="<%=campground.images[0].url%>">
         <% }else {%>
-        <img class="img-fluid" alt="" src="https://res.cloudinary.com/dqb0u6rvs/image/upload/v1722202361/yelpCamp/gh9bkfgtj8ywnzkxkt7t.jpg">
+        <img crossorigin="anonymous" class="img-fluid" alt="" src="https://res.cloudinary.com/dqb0u6rvs/image/upload/v1722202361/yelpCamp/gh9bkfgtj8ywnzkxkt7t.jpg">
         <% } %>
       </div>
       <div class="col-md-8">
